// Vitest Snapshot v1

exports[`Divider component > renders horizontal divider 1`] = `
<div>
  <hr
    class="c-jpqjUq c-jpqjUq-jokUAR-orientation-horizontal"
  />
</div>
`;

exports[`Divider component > renders vertical divider 1`] = `
<div>
  <hr
    class="c-jpqjUq c-jpqjUq-fKZlxR-orientation-vertical"
  />
</div>
`;
